Plugins: -replaced DatatypeConverter by Base64 and HexFormatter AbstractFFmpegBinary: -updated getFullPath to throw different exception in case file doesn't exist YTHelper: -added new getPage methods, better place auto/error handling build>full
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@44050 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: c097b552a966c797d33a66d6625dc117f971d7c1